src/scss/_table.scss
// Copyright (c) 2022 Target Brands, Inc. All rights reserved.
//
// Use of this source code is governed by the LICENSE file in this repository.

.table-base {
  width: 100%;
  margin: 0 0 1rem;
  padding: 0;

  background-color: var(--color-bg-dark);
  border-collapse: collapse;
}

.table-base thead {
  border-bottom: 2px solid var(--color-lavender);
}

.table-base tr .-icon {
  width: 3rem;
  padding-left: 1.25rem;
}

.table-base tr {
  padding: 0.35em;

  border-bottom: 1px solid var(--color-bg-light);
}

.table-base tr:last-child {
  border-bottom: none;
}

.table-base caption {
  margin: 0.5em 0 0.75em;

  font-size: 1.5em;

  div {
    display: flex;
    justify-content: space-between;
    padding-left: 1rem;
  }
}

.table-base th {
  padding: 0.625em;
  overflow: hidden;

  font-weight: bold;
  white-space: nowrap;
  text-align: left;
  text-overflow: ellipsis;
}

.table-base td.name,
.table-base td.ref,
.table-base td.description {
  max-width: 15rem;
}

.table-base td {
  padding: 0.625em;

  vertical-align: top;
}

.table-base td .list-item {
  display: flex;
  max-width: 12rem;
  margin: 0.2rem 0;
  padding: 0.4rem 0.8rem;
  overflow: scroll;

  color: var(--color-text);
  font-size: 1rem;

  background-color: var(--color-bg);
}

td .key .list-item {
  max-width: 24rem;
}

.table-base .source-id {
  padding: 0.2rem 1rem;

  font-weight: 300;

  background-color: var(--color-bg);
}

.table-base tr.-success {
  border-left: 2px solid var(--color-green);
}

.table-base tr.error-data {
  color: var(--color-red-light);

  border-bottom: 1px solid var(--color-bg-light);
  border-left: 2px solid var(--color-red);

  td {
    padding-top: 0;
  }
}

.table-base tr.-error {
  border-bottom: none;
  border-left: 2px solid var(--color-red);
}

.table-base .error-content {
  color: var(--color-red-light);
  font-size: 0.8em;
  white-space: pre-wrap;
}

.hook-status {
  fill: none;
}

.hook-status.-success {
  stroke: var(--color-green);
}

.hook-status.-failure {
  stroke: var(--color-red);
}

/* responsive style applied when screen width is reduced to < 600px */
@media screen and (max-width: 600px) {
  .table-base {
    border: 0;
  }

  .table-base caption {
    font-size: 1.3em;

    .buttons {
      display: inline-block;
    }
  }

  .table-base thead {
    position: absolute;

    width: 1px;
    height: 1px;
    margin: -1px;
    padding: 0;
    overflow: hidden;

    border: none;

    clip: rect(0 0 0 0);
  }

  .table-base tr {
    display: block;
    margin-bottom: 0.625em;

    border-bottom: 2px solid var(--color-lavender);
  }

  .table-base tr .-icon {
    width: inherit;
    padding-left: 0.6rem;
  }

  .table-base tr.-error {
    margin-bottom: 0;
  }

  .table-base tr.error-data {
    border-bottom: 2px solid var(--color-lavender);
  }

  .table-base td {
    display: flex;
    justify-content: space-between;

    font-size: 0.8em;
    text-align: right;

    border-bottom: 1px solid var(--color-bg-light);
  }

  .table-base td.name,
  .table-base td.ref,
  .table-base td.description {
    max-width: initial;
  }

  .table-base td a {
    max-width: 8rem;
  }

  .table-base td .list-item {
    font-size: 0.9rem;
  }

  .table-base td::before {
    float: left;

    font-weight: bold;

    content: attr(data-label);
  }

  .table-base td:last-child {
    border-bottom: 0;
  }
}

